--- a/about.html
+++ b/about.html
@@ -1,2 +1,9 @@
 
 <link rel="stylesheet" href="style.css">
+
+<nav>
+  <a href="index.html">Projects</a>
+  <a href="about.html">About</a>
+  <a href="resume.html">Resume</a>
+  <a href="contact.html">Contact</a>
+</nav>
