--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,8 @@
 <link rel="stylesheet" href="style.css">
+
+<nav>
+  <a href="index.html">Projects</a>
+  <a href="about.html">About</a>
+  <a href="resume.html">Resume</a>
+  <a href="contact.html">Contact</a>
+</nav>
