Enhance index.html with project information
Added project details and navigation links to index.html.

--- a/index.html
+++ b/index.html
@@ -6,3 +6,31 @@
   <a href="resume.html">Resume</a>
   <a href="contact.html">Contact</a>
 </nav>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Projects | Moein Ardakani</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<nav>
+  <a href="index.html">Projects</a>
+  <a href="about.html">About</a>
+  <a href="resume.html">Resume</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<h1>Projects</h1>
+
+<h2>Citi Bike 2022: Weather & Ride Behavior Analysis</h2>
+<p>
+Data analytics case study analyzing Citi Bike usage patterns in 2022 with a focus on
+weather conditions, user types, and temporal trends.
+</p>
+
+<a href="case-study.html">View Case Study →</a>
+
+</body>
+</html>
