Update about.html with personal details and career goals
Added content to the about page including personal information and career objectives.

--- a/about.html
+++ b/about.html
@@ -7,3 +7,41 @@
   <a href="resume.html">Resume</a>
   <a href="contact.html">Contact</a>
 </nav>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>About | Moein Ardakani</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<nav>
+  <a href="index.html">Projects</a>
+  <a href="about.html">About</a>
+  <a href="resume.html">Resume</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<h1>About Me</h1>
+
+<p>
+I am a data analyst with a strong analytical background and hands-on experience in
+data cleaning, exploratory data analysis, statistical modeling, and data visualization.
+</p>
+
+<p>
+After transitioning into data analytics, I completed intensive project-based training
+focused on Python, SQL, and data-driven problem solving. I enjoy transforming complex
+datasets into clear insights that support decision-making.
+</p>
+
+<p>
+I am currently seeking junior to mid-level data analyst or BI analyst roles.
+Open to on-site, hybrid, and remote opportunities.
+</p>
+
+<p><strong>Location:</strong> Potsdam / Berlin, Germany</p>
+
+</body>
+</html>
