--- a/resume.html
+++ b/resume.html
@@ -6,3 +6,29 @@
   <a href="resume.html">Resume</a>
   <a href="contact.html">Contact</a>
 </nav>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Resume | Moein Ardakani</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<nav>
+  <a href="index.html">Projects</a>
+  <a href="about.html">About</a>
+  <a href="resume.html">Resume</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<h1>Resume</h1>
+
+<p>
+<a href="assets/resume.pdf" download>
+Download Resume (PDF)
+</a>
+</p>
+
+</body>
+</html>
