--- a/case-study.html
+++ b/case-study.html
@@ -6,3 +6,27 @@
   <a href="resume.html">Resume</a>
   <a href="contact.html">Contact</a>
 </nav>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Contact | Moein Ardakani</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<nav>
+  <a href="index.html">Projects</a>
+  <a href="about.html">About</a>
+  <a href="resume.html">Resume</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<h1>Contact</h1>
+
+<p>Email: moeinardakani (at) gmail (dot) com</p>
+<p>GitHub: <a href="https://github.com/moeinmmm70">github.com/moeinmmm70</a></p>
+<p>LinkedIn: (add your LinkedIn URL)</p>
+
+</body>
+</html>
