--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,9 @@
 
 <h1>Contact</h1>
 
-<p>Email: moeinardakani (at) gmail (dot) com</p>
+<p>Email: moein.mellat@gmail.com</p>
 <p>GitHub: <a href="https://github.com/moeinmmm70">github.com/moeinmmm70</a></p>
-<p>LinkedIn: (add your LinkedIn URL)</p>
+<p>LinkedIn: https://www.linkedin.com/in/moeinmellat/ </p>
 
 </body>
 </html>
